manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: default
  labels:
    k8s-app: spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: spring-boot-app
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        k8s-app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: springdemo.azurecr.io/spring-boot-app:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
           httpGet:
             path: /
             port: 8080
             scheme: HTTP
          livenessProbe:
           initialDelaySeconds: 30
           timeoutSeconds: 1
           httpGet:
             path: /
             port: 8080
             scheme: HTTP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
