manifests/kong-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-deployment
  namespace: default
  labels:
    k8s-app: kong-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kong-deployment
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        k8s-app: kong-deployment
    spec:
      containers:
        - name: kong-deployment
          image: springdemo.azurecr.io/kong:latest
          ports:
            - containerPort: 8000
              name: p8000
            - containerPort: 8443
              name: p8443
            - containerPort: 8001
              name: p8001
            - containerPort: 8444
              name: p8444
          readinessProbe:
           httpGet:
             path: /
             port: 8001
             scheme: HTTP
          livenessProbe:
           initialDelaySeconds: 30
           timeoutSeconds: 1
           httpGet:
             path: /
             port: 8001
             scheme: HTTP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
