manifests/kong-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
spec:
  selector:
    k8s-app: kong-deployment
  ports:
  - name: p8000
    protocol: TCP
    port: 8000
    targetPort: 8000
  - name: p8443
    protocol: TCP
    port: 8443
    targetPort: 8443
  - name: p8001
    protocol: TCP
    port: 8001
    targetPort: 8001
  - name: p8444
    protocol: TCP
    port: 8444
    targetPort: 8444
