manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    k8s-app: spring-boot-app
spec:
  type: LoadBalancer
  selector:
    k8s-app: spring-boot-app
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
